@@ -1,123 +1,119 @@
-# IronPulse 
+# IronPulse
 
-IronPulse is a Java OOP-based Gym Membership Management System with a Swing dashboard UI.
+IronPulse is a Java OOP gym management project built on Spring Boot, with a MongoDB-backed REST API and a lightweight web dashboard for operations.
+
+## Live App
+
+- Production URL: https://ironpluse.onrender.com/
+- Default login: admin / admin123
 
 ## Features
 
-- Dashboard cards include total members, active members, active plans, monthly revenue, today revenue, and pending payments
-- Dashboard includes a recent activity panel (latest payments and member joins)
-- Admin login before dashboard access (default: admin / ironpulse123)
-- Login now uses a masked password field and max 3 attempts
-- Member management: add, edit, deactivate, delete
-- Member search filter (ID, name, contact, plan, status, type)
-- Live search updates while typing in the member search box
-- Safer table actions when sorting is enabled (edit/delete/export uses selected row correctly)
-- Plan hierarchy: Student, Premium, VIP via abstract class polymorphism
-- Billing service interface + implementation
-- Payment tracking with PAID/PENDING status and receipt text
-- Invoice export as text files in `invoices/` (auto on payment + manual export from table)
-- Monthly summary export as text report in `reports/` from dashboard button
-- CSV file persistence in `data/members.csv` and `data/payments.csv`
-- Auto seed demo members/payments on first run when CSV files are empty
-- Custom exceptions for member lookup and invalid payments
-- Member validation and duplicate ID checks on add/update operations
-- Form-level validation for age/date/amount fields with clear error messages
+- Java-first domain model for members, payments, and dashboard analytics
+- Layered backend architecture (Controller, Service, Repository, Model)
+- Web dashboard with overview cards, recent payments, member distribution, and activity feed
+- Member management: create, view, update, delete, and search
+- Payment tracking with paid and pending statuses
+- Reports and summary endpoints for dashboard analytics
+- Single-deploy backend + frontend from one Spring Boot service
+- Render-ready Docker deployment
+- MongoDB Atlas support via environment variables
 
-## OOP Mapping
+## Tech Stack
 
-- Encapsulation: private fields + getters/setters in model classes
-- Inheritance: `MembershipPlan` base class with concrete plan subclasses
-- Polymorphism: `calculateBilling()` overridden by each plan
-- Abstraction: `BillingService` interface and `MembershipPlan` abstract class
+- Java 21
+- Spring Boot 3
+- Spring Data MongoDB
+- Maven
+- Vanilla HTML, CSS, JavaScript frontend in static resources
+- Docker + Render deployment
 
-## Run
+## OOP Focus
 
-From the `IronPluse` folder:
+This project is organized around object-oriented backend design in Java:
 
-```bash
-bash scripts/fetch_mongo_driver.sh
-bash scripts/fetch_javafx.sh
-mkdir -p out
-javac --module-path "lib" --add-modules javafx.controls,javafx.graphics -cp "lib/*" -d out $(find src -name "*.java")
-java --module-path "lib" --add-modules javafx.controls,javafx.graphics -cp "out:lib/*" ironpulse.Main
-```
+- Encapsulation: domain state and behavior are modeled in dedicated classes under src/main/java/com/ironpulse/model
+- Abstraction: service classes hide business logic behind clear method contracts
+- Separation of concerns: controllers handle HTTP, services handle logic, repositories handle persistence
+- Maintainability: each package has a single responsibility aligned with OOP and clean architecture principles
 
-## Build JAR
+If you are evaluating this as an OOP project, prioritize the Java backend packages and service flows over the frontend layer.
 
-To build a distributable JAR:
+## Project Structure
 
-```bash
-./build.sh --build-only
-```
+- src/main/java/com/ironpulse/controller: REST controllers
+- src/main/java/com/ironpulse/service: business logic
+- src/main/java/com/ironpulse/model: MongoDB document models
+- src/main/java/com/ironpulse/repository: Mongo repositories
+- src/main/resources/static/index.html: frontend app
+- src/main/resources/application.yml: runtime configuration
+- seed-demo-data.sh: helper script to populate demo data
 
-Generated artifact:
+## Local Run
 
-- `dist/IronPulse.jar`
-
-Run from JAR:
+1. Set Java 21 and Maven.
+2. Configure MongoDB URI if needed.
+3. Start the app.
 
 ```bash
-java --module-path "lib" --add-modules javafx.controls,javafx.graphics -cp "lib/*:dist/IronPulse.jar" ironpulse.Main
+mvn spring-boot:run
 ```
 
-## Build Windows EXE
-
-EXE packaging must be done on Windows using jpackage.
-
-1. Open Command Prompt in project root.
-2. Run:
-
-```bat
-build_exe_windows.bat
-```
-
-Output:
-
-- EXE installer is generated in dist/.
-
-Important:
-
-- Ensure JavaFX Windows jars are available in lib/ before packaging, for example:
-	- javafx-base-21.0.5-win.jar
-	- javafx-graphics-21.0.5-win.jar
-	- javafx-controls-21.0.5-win.jar
-
-To launch the Swing app inside the browser-backed viewer used in this workspace:
-
-```bash
-bash scripts/run_frontend.sh
-```
-
-The app now prefers JavaFX UI and automatically falls back to Swing if JavaFX cannot launch.
-
-To run directly (desktop) with JavaFX dependencies prepared:
-
-```bash
-bash scripts/run_javafx.sh
-```
-
-Startup logs now show the active UI mode (`JavaFX` preferred, `Swing` fallback).
-
-Then open:
+App URL:
 
 ```text
-http://localhost:6080/vnc.html?autoconnect=true&resize=remote
+http://localhost:8080
 ```
 
-## MongoDB Backend (Optional)
+## Environment Variables
 
-By default IronPulse uses CSV in `data/`. To use MongoDB instead, set environment variables before running:
+Set these for local or cloud deployment:
 
 ```bash
-export IRONPULSE_MONGO_URI="mongodb+srv://<user>:<pass>@<cluster-url>/?retryWrites=true&w=majority"
-export IRONPULSE_MONGO_DB="ironpulse"
+MONGO_URI=mongodb+srv://<user>:<password>@<cluster>/<database>?retryWrites=true&w=majority&appName=Cluster0
+DB_NAME=ironpulse
+PORT=8080
 ```
 
-If MongoDB is unreachable, the app automatically falls back to CSV storage.
+Spring defaults are configured in application.yml, but Render should provide MONGO_URI in service environment variables.
 
-## Data Files
+## Seed Demo Data
 
-On first run, the app creates:
+Use the included script to clear existing data and seed demo members and payments:
 
-- `data/members.csv`
-- `data/payments.csv`
+```bash
+./seed-demo-data.sh https://ironpluse.onrender.com
+```
+
+What it does:
+
+- Verifies service connectivity
+- Deletes existing members and payments
+- Seeds 25 demo members
+- Seeds 20 demo payments
+
+## Deploy on Render
+
+1. Connect repository branch render-deployment.
+2. Ensure Docker deployment is enabled.
+3. Set MONGO_URI and DB_NAME in Render environment variables.
+4. Deploy and verify:
+
+```text
+GET /api/dashboard/overview
+GET /api/dashboard/members/distribution
+GET /api/dashboard/activities/recent
+```
+
+## API Overview
+
+- /api/members
+- /api/payments
+- /api/dashboard/overview
+- /api/dashboard/members/distribution
+- /api/dashboard/activities/recent
+
+## Notes
+
+- If dashboard shows connection unavailable, verify dashboard endpoints return 200 and MongoDB credentials are valid.
+- If data looks stale, rerun the seeding script.
